--- a/ders/kiraat.html
+++ b/ders/kiraat.html
@@ -33,9 +33,9 @@ Bu sayfadaki örnekleri, imlâyı değiştirmeyen dört grupta topladım, beşin
 <ol>
     <li>Şive/lehçe farkları -- çok sayıda, anlam değişmez</li>
     <li>Hareke farkları -- daha az sayıda, anlam değişebilir</li>
-    <li><a href="./iqra_list.html#tablo1">Farklı harf, aynı kelime</a> -- 200 kadar ayet, esas anlam değişmez</li>
-    <li><a href="#tablo1">Farklı kelime, aynı imlâ</a> -- noktalama farkı, 13 ayette 10 kelime</li>
-    <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> -- 44 ayet, biri hariç hepsi harf farkı</li>
+    <li><a href="./iqra_list.html#tablo1">Farklı harf, aynı kelime</a> -- 203 ayet, kelime değişmez</li>
+    <li><a href="#tablo1">Farklı kelime, aynı imlâ</a> -- 13 ayette farklı kelimeler</li>
+    <li><a href="./mesahif.html#tablo1">Farklı imlâ</a> -- 44 ayet, bir kelime farkı</li>
 </ol>
 <p>Aşağıdaki her örnekte ayet numarasına tıklayınca, ayet <b>Iqra</b> yazılımında gösterilir. Kelimenin okunuşuna tıklayınca, ayetin farklı kıraatleri <i>Corpus Coranicum</i> sitesinde açılır. Sarı çizginin altında günümüzde standart olan Asım/Hafs rivayetini, üstünde de farklı okuyuşları görebilirsiniz.
 </p>
