--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -32,37 +32,43 @@
 <p><b>Âyetlerin</b> <m>sayısı ve sırası</m> korunmuş. "On beşinci surenin dokuzuncu ayeti" deyince bütün dünyada aynı ayet anlaşılır ve <a name="v=15:9&r=HfZ">15:9</a> şeklinde gösterilir. (Kitabın korunmuş olduğunun en önemli göstergesi bu özellik!) Hiçbir mushafta araya bir ayet eklendiğini ya da silindiğini göremezsiniz. Bazı surelerin başındaki şifreli harflerin ayet sayılması ihtilaflı ama standart mushafımızda 6236 ayet var.</p>
 <p><b>Kelimelerin</b> <m>sırası</m> korunmuş. Hiçbir mushafta kelime sırasının değiştiğini göremezsiniz (*). Standart mushafımızda 77.430 kelime olmakla birlikte, bu sayıda ihtilaf var. Çünkü bazı kelimeleri ayrı ya da bitişik yazmak mümkün. </p>
 <blockquote>
-    (*) <a name="v=9:111&r=qtl">Tevbe 111. ayette</a> ardışık iki kelimenin sırası aynı imlâ ile değişebiliyor.
+    (*) <a name="v=9:111&r=qtl">Âli İmran 195</a> ve <a name="v=3:195&r=qtl">Tevbe 111</a> ayetlerinde, imlâsı aynı olan ardışık iki kelimenin sırası değişebiliyor.
 </blockquote>
-<p>En iyi bilinen örnek, iki kelime içeren <i>ebneumme</i> "anamın oğlu" ifadesi. Kitap'ta iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur: A'râf suresinde ayrı yazılır ve ikinci kelime elif ile başlar, Tâhâ suresinde aynı kelime vav ile yazılır ve önceki kelimeye bitişiktir.
+<p>Günümüzde kullanılan ayet numaraları 1924 Kahire mushafına uygun. Ayet numarasında ve kelimelerin dizilişinde en ufak bir ihtilaf yok. Halbuki bu mushaf öncesinde, İslam ülkelerinde ayet numarası diye bir kavram yoktu. Teyid etmek için evinizdeki kullanılmayan eski mushafa bakın. </p>
+<p>Kelimelerin bitişik yazılmasına bir örnek, iki kelime içeren <i>ebneumme</i> "anamın oğlu" ifadesi. Kitabımızda iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur: A'râf suresinde iki kelime olarak "elif-be-nun" ve "elif-mim", Tâhâ suresinde bitişik "ye-be-nun-vav-mim" şeklinde yazılır.
     <img src="/Kitap/KK/yebneumme.png">
     <div class="caption">
-        <a href="https://okuyun.github.io/Rehber/finder#b=Abn%20%3Em" target=finder>ebne umme</a> &emsp;#b=Abn%20>m
+        <a name="v=7:150&r=bny&r=Amm">7:150</a> ve <a name="v=20:94&r=bny">20:94</a>
     </div>
 </p>
-<h3>Takdim-tehir farkı yok</h3>
+
+<h3 id="takdim">Takdim-tehir farkı yok</h3>
 <p>İkinci örnek: "Oyun ve eğlence" anlamına gelen <i>la'ibun velehvun</i> kelimeleri dört ayette bu sırada, iki ayette "eğlence ve oyun" şeklinde ters sırada geçiyor. Ters söylemekle anlam değişir mi? Elbette hayır. Ama hiçbir kıraat imamı bu altı ayeti, standart kıraatten farklı okumamış. Yani, anlamı değiştirmeyen ve hataya açık görünen bu kelimelerin sırası bile korunmuş.
     <img src="/Kitap/KK/ittehazu_dinehum.png">
     <div class="caption">
-        <a href="https://okuyun.github.io/Rehber/finder#b=tx*wA%20dynhm" target=finder>ittehazû dînehum</a> &emsp;#b=tx*wA%20dynhm
+        <a name="v=6:70&r=lEb&r=lhw">6:70</a> ve <a name="v=7:51&r=lEb&r=lhw">7:51</a>
     </div>
 </p>
-<h3>Başka ne korunmuş?</h3>
-<p><b>Kıraat farkları</b> imamların okuyuş tercihleri ya da hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.</p>
-<p><b>İmlâ farkları</b> da yazıcıların rastgele tercihleri veya hataları değil, bölgesel kıraat farklarını yansıtıyor. Kıraat farklarına bağlı olan şu unsurlar korunmuş:</p>
+
+<h3 id="harf">Tek harf farkı</h3>
+<p>Sessiz harfleri değiştiren kıraat farklarının nerdeyse tamamı tek harf boyutundadır: Bir harf eksik, bir harf fazla, ya da bir harf yerine başka bir harf okunmuş.</p>
 <ul>
-    <li><a href="./iqra_list.html#tablo1">200 kadar kelime</a> imlâ değişmeden farklı harfle okunabilir. Bunların tamamı tek harf farkıdır. <br>
-    (bu kelimeleri Iqra yazılımda göstermek için çalışıyorum)</li>
-    <li><a href="./kiraat.html#tablo1">13 ayette</a> aynı imlâ ile farklı kelime okunabilir. Bunlar da ikisi hariç tek harf farkıdır. </li>
-    <li>İmlâ farkları büyük oranda tek harf boyutundadır. Tek harfi aşan imlâ farkı <a href="./mesahif.html#tablo1">üç kelime</a>: <br>
-    * Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafında <b>tahtehâ ⇒ min tahtihâ</b><br>
-    * Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafında <b>yuseyyirukum ⇒ yenşurukum</b><br>
-    * Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam mushafında <b>huve ⇒</b> (yok) </li>
+    <li><a href="./mesahif.html#tablo1">44 kelime</a> için kaydedilmiş imlâ farkları büyük oranda tek harf boyutundadır. Tek harfi aşan imlâ farkı üç kelime:<br>
+* Tevbe <a name="v=9:100&r=tHt">9:100</a> — Mekke mushafı <b>tahtehâ ⇒ min tahtihâ</b><br>
+* Yunus <a name="v=10:22&r=syr">10:22</a> — Şam mushafı <b>yuseyyirukum ⇒ yenşurukum</b><br>
+* Hadid <a name="v=57:24&b=huwa">57:24</a> — Medine ve Şam <b>huvel-ganiy ⇒ el-ganiy</b></li>
+    <li><a href="./kiraat.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
+* Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
+* Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
+    <li><a href="./iqra_list.html#tablo1">240 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
 </ul>
-<p>Sessiz harf değiştiren kıraat farklarının nerdeyse tamamı tek harf boyutundadır: Bir harf eksik, bir harf fazla, ya da bir harf yerine başka bir harf okunmuş. Tek harfi aşan farklar beş adet:</p>
+<p>Tek harfi aşan beş kelime farkı:</p>
 <table id=tablo1></table>
 <p>Bunların ikisi imlâya yansımıyor, pembe işaretli üçü yansıyor.</p>
-<h3>Sonuç</h3>
+
+<h3 id="sonuc">Sonuç</h3>
+<p><b>Kıraat farkları</b> imamların okuyuş tercihleri ya da hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.
+<b>İmlâ farkları</b> da yazıcıların rastgele tercihleri veya hataları değil, bölgesel kıraat farklarını yansıtıyor. Kıraat farklarına bağlı olarak kağıt üstünde korunmuş.</p>
 <p>"Bir harfi bile değişmemiştir" söylemi, kıraat farklarından habersiz olmanın bir göstergesidir, bu söylemden vaz geçmeliyiz. Peki ne diyelim? Aslında korunmuşluk çok daha kuvvetli bir hakikat: Kuran-ı Kerim bütün <b>kıraat farklarıyla birlikte</b> korunmuştur; <m>surelerin</m>, <m>ayetlerin</m>, <m>kelimelerin</m> dizilişinde hiçbir farklılık yoktur. Bazı kelimelerin okunuşunda hareke ya da harf farkı olabilir. Kıraat farkları hafızalarda, imlâ farkları Osmanî mushaflarda kaydedilmiştir.</p>
 <br>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Eylul 2024<br>
