--- a/ders/korunmus.html
+++ b/ders/korunmus.html
@@ -30,9 +30,9 @@
   (*) Asım'ın Hafs kıraati son yüz yıl içinde fiilen dünya standardı olmuştur.
 </blockquote>
 <p><b>Âyetlerin</b> <m>sayısı ve sırası</m> korunmuş. "On beşinci surenin dokuzuncu ayeti" deyince bütün dünyada aynı ayet anlaşılır ve <a name="v=15:9&r=HfZ">15:9</a> şeklinde gösterilir. (Kitabın korunmuş olduğunun en önemli göstergesi bu özellik!) Hiçbir mushafta araya bir ayet eklendiğini ya da silindiğini göremezsiniz. Bazı surelerin başındaki şifreli harflerin ayet sayılması ihtilaflı ama standart mushafımızda 6236 ayet var.</p>
-<p><b>Kelimelerin</b> <m>sırası</m> korunmuş. Hiçbir mushafta kelime sırasının değiştiğini göremezsiniz (*). Standart mushafımızda 77.430 kelime olmakla birlikte, bu sayıda ihtilaf var. Çünkü bazı kelimeleri ayrı ya da bitişik yazmak mümkün. </p>
+<p id="sira"><b>Kelimelerin</b> <m>sırası</m> korunmuş. Hiçbir mushafta kelime sırasının değiştiğini göremezsiniz (*). Standart mushafımızda 77.430 kelime olmakla birlikte, bu sayıda ihtilaf var. Çünkü bazı kelimeleri ayrı ya da bitişik yazmak mümkün. </p>
 <blockquote>
-    (*) <a name="v=9:111&r=qtl">Âli İmran 195</a> ve <a name="v=3:195&r=qtl">Tevbe 111</a> ayetlerinde, imlâsı aynı olan ardışık iki kelimenin sırası değişebiliyor.
+    (*) <a name="v=3:195&r=qtl">Âli İmran 195</a> ve <a name="v=9:111&r=qtl">Tevbe 111</a> ayetlerinde, imlâsı aynı olan ardışık iki kelimenin sırası değişebiliyor.
 </blockquote>
 <p>Günümüzde kullanılan ayet numaraları 1924 Kahire mushafına uygun. Ayet numarasında ve kelimelerin dizilişinde en ufak bir ihtilaf yok. Halbuki bu mushaf öncesinde, İslam ülkelerinde ayet numarası diye bir kavram yoktu. Teyid etmek için evinizdeki kullanılmayan eski mushafa bakın. </p>
 <p>Kelimelerin bitişik yazılmasına bir örnek, iki kelime içeren <i>ebneumme</i> "anamın oğlu" ifadesi. Kitabımızda iki yerde geçen bu ifade birinde ayrı, diğerinde bitişik yazılır. Eski ve yeni bütün mushaflarda bu ayrıntı korunmuştur: A'râf suresinde iki kelime olarak "elif-be-nun" ve "elif-mim", Tâhâ suresinde bitişik "ye-be-nun-vav-mim" şeklinde yazılır.
@@ -60,14 +60,14 @@
     <li><a href="./kiraat.html#tablo1">14 kelime</a> imlâya uygun farklı bir kelime ile okunabilir. Bunlar da ikisi hariç tek harf farkıdır:<br>
 * Ankebut <a name="v=29:58&r=bwA">29:58</a> — <b>nubevvienne ⇒ nusviyenne</b><br>
 * Hucurat <a name="v=49:6&r=byn">49:6</a> — <b>fetebeyyenû ⇒ fetesebbetû</b> (üç kere)</li>
-    <li><a href="./iqra_list.html#tablo1">240 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
+    <li><a href="./iqra_list.html#tablo">233 kelime</a> imlâya uygun farklı bir harfle okunabilir. Bunların tamamı tek harf farkıdır. </li>
 </ul>
 <p>Tek harfi aşan beş kelime farkı:</p>
 <table id=tablo1></table>
 <p>Bunların ikisi imlâya yansımıyor, pembe işaretli üçü yansıyor.</p>
 
 <h3 id="sonuc">Sonuç</h3>
-<p><b>Kıraat farkları</b> imamların okuyuş tercihleri ya da hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.
+<p><b>Kıraat farkları</b> imamların icadı ya da okuyuş hataları değil, çok sayıda okuyucunun sahabeden rivayetine dayanıyor. Hepsi nesilden nesile hafızalarda saklanmış.
 <b>İmlâ farkları</b> da yazıcıların rastgele tercihleri veya hataları değil, bölgesel kıraat farklarını yansıtıyor. Kıraat farklarına bağlı olarak kağıt üstünde korunmuş.</p>
 <p>"Bir harfi bile değişmemiştir" söylemi, kıraat farklarından habersiz olmanın bir göstergesidir, bu söylemden vaz geçmeliyiz. Peki ne diyelim? Aslında korunmuşluk çok daha kuvvetli bir hakikat: Kuran-ı Kerim bütün <b>kıraat farklarıyla birlikte</b> korunmuştur; <m>surelerin</m>, <m>ayetlerin</m>, <m>kelimelerin</m> dizilişinde hiçbir farklılık yoktur. Bazı kelimelerin okunuşunda hareke ya da harf farkı olabilir. Kıraat farkları hafızalarda, imlâ farkları Osmanî mushaflarda kaydedilmiştir.</p>
 <br>
