--- a/ders/hareke.html
+++ b/ders/hareke.html
@@ -12,29 +12,27 @@
 <h2>Hareke farkları listesi &emsp; <button><a href="kadime.html">◀</a></button></h2>
 
 <p></p>
-<pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
-1 Nāfi`      Medine
-2 Ibn Kesīr  Mekke
-3 Ebū `Amr   Basra
-4 Ibn `Āmir  Şam
-5 `Āsım      Kûfe
-6 Hamza      Kûfe
-7 el-Kisā'ī  Kûfe
-</pre>
-<p>Bütün kıraat varyantları beş grupta toplanabilir. Bunların pek çoğu söyleyiş (lehçe) ve hareke farklarıdır, değişen bir sessiz harf yoksa bunları tabloda göstermedim. Kelime farkları içeren dördüncü grubu <span class=yellow>sarı renkle</span>, farklı imlâ gerektiren beşinci grubu <span class=pink>pembe renkle</span> işaretledim:</p>
+<p>Bütün kıraat farkları üç grupta toplanabilir:</p>
 <ol>
-    <li>Şive/lehçe farkları
-    <li>Hareke farkları
-    <li>Farklı harf, aynı kelime
-    <li>Farklı kelime (<span class=yellow>sarı</span>)
-    <li>Farklı imlâ (<span class=pink>pembe</span>)
+    <li>Şive/lehçe farkları -- anlam değişmez
+    <li>Hareke farkları -- sessiz harfler değişmez
+    <li><a href="./iqra_list.html">Harf farkları</a> -- kelime veya imlâ değişebilir
 </ol>
-<p>Birinci ve ikinci gruptaki yaklaşık 500 ayet bu sayfada görülecek. 1 Ocak'ta başladık.</p>
+<p>İkinci gruptaki yaklaşık 1200 kelime bu sayfada görülecek. 1 Ocak'ta başladık.</p>
 
   <table id="tablo1"></table>
 <blockquote>
 </blockquote>
 <p>Kıyaslanan kıraat imamı: <select id=qari></select></p>
+<pre>et-Teysīr'de <a href="https://islamansiklopedisi.org.tr/kiraat--ilim" target=Kuran>kıraat imamları</a>:
+    1 Nāfi`      Medine
+    2 Ibn Kesīr  Mekke
+    3 Ebū `Amr   Basra
+    4 Ibn `Āmir  Şam
+    5 `Āsım      Kûfe
+    6 Hamza      Kûfe
+    7 el-Kisā'ī  Kûfe
+</pre>
 <br>
 <p>Mesâhif <button><a href="kadime.html">◀</a></button> &emsp; Ekim 2024
 </p>
